--- a/src/styles.css
+++ b/src/styles.css
@@ -3,11 +3,12 @@ body{
     background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100%;
+    height:60%;
     }
     .container{
     height: 100%;
     align-content: center;
+    margin-top: 300px;
     }
     
     .card{
