--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-body{
+.login{
     background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    height:60%;
+    height:950px;
     }
     .container{
     height: 100%;
     align-content: center;
-    margin-top: 300px;
     }
     
     .card{
