--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,94 +1,85 @@
-<h1 id="header">Music Recommender</h1>
-<hr>
-<!-- select music genre sect -->
-<div class="container">
-    <div class="selec">
-        <select class="form-select">
-            <option selected disabled>chose your genre of music</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="3">4</option>
-            <option value="3">5</option>
-        </select>
+
+
+    <h1 class="title">Music Recommender</h1>
+    <hr>
+
+    <div class="container">
+        <p id="paragraph">We are most delightfully welcoming you to the most amazing Music recommender,sign up and get
+            to listen to the
+            latest and most interesting music,leave a comment </p>
     </div>
 
-<ul>
-    <li></li>
-    
+    <div class="col display">
+        <a type="button" class="btn btn-primary text-center" href="">Post song</a>
+    </div>
 
-
-</ul>
-</div>
-<!-- Footer -->
-<footer class="page-footer font-small blue pt-4">
-
-    <!-- Footer Links -->
-    <div class="container-fluid text-center text-md-left">
-
-        <!-- Grid row -->
+    <div class="container categories">
+        <h1 style="text-align:center; ">Categories of Music</h1>
+        <hr>
         <div class="row">
-
-            <!-- Grid column -->
-            <div class="col-md-6 mt-md-0 mt-3">
-
-                <!-- Content -->
-                <h5 class="text-uppercase">Music Recommender</h5>
-                <p>Enjoy the best application to watching your most interesting music.</p>
-
+            <div class="col-sm-6">
+                <div class="card ">
+                    <div class="well well-lg p-3" style="text-align: center;">
+                        <h3>Gospel</h3>
+                        <hr>
+                        <p>Gospel music often has dominant vocals (often with strong use of harmony) with Christian lyrics. Gospel music can be traced to the early 17th century. Hymns and sacred songs were often repeated in a call and response fashion.</p>
+                        <a href="" class="btn btn-primary btn-center -center"
+                            style="font-size:22px;">
+                            Open</a>
+                    </div>
+                </div>
             </div>
-            <!-- Grid column -->
-
-            <hr class="clearfix w-100 d-md-none pb-3">
-
-            <!-- Grid column -->
-            <div class="col-md-3 mb-md-0 mb-3">
-
-                <!-- Links -->
-                <h5 class="text-uppercase">Links</h5>
-
-                <ul class="list-unstyled">
-                    <li>
-                        <a href="#!">Link 1</a>
-                    </li>
-                    <li>
-                        <a href="#!">Link 2</a>
-                    </li>
-
-                </ul>
-
+            <div class="col-sm-6">
+                <div class=" card">
+                    <div class="well well-lg p-3" style="text-align: center;">
+                        <h3>HipHop</h3>
+                        <hr>
+                        <p>Hip-hop, cultural movement that attained widespread popularity in
+                             the 1980s and '90s; also, the backing music for rap,
+                              the musical style incorporating rhythmic and/or rhyming speech that became 
+                            the movement's most lasting and influential art form.</p>
+                        <a href="" class="btn btn-primary btn-center -center"
+                            style="font-size:22px;">
+                            Open</a>
+                    </div>
+                </div>
             </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-3 mb-md-0 mb-3">
-
-                <!-- Links -->
-                <h5 class="text-uppercase">Links</h5>
-
-                <ul class="list-unstyled">
-                    <li>
-                        <a href="#!">Link 1</a>
-                    </li>
-                    <li>
-                        <a href="#!">Link 2</a>
-                    </li>
-                </ul>
-
-            </div>
-            <!-- Grid column -->
-
         </div>
-        <!-- Grid row -->
-
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card ">
+                    <div class="well well-lg p-3" style="text-align: center;">
+                        <h3>Reggae</h3>
+                        <hr>
+                        <p>Reggae is a music genre that originated in
+                             Jamaica in the late 1960s. The term also denotes the 
+                             modern popular music of Jamaica and its diaspora.</p>
+                        <a href="" class="btn btn-primary btn-center -center" style="font-size:22px;">
+                            Open</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class=" card">
+                    <div class="well well-lg p-3" style="text-align: center;">
+                        <h3>RnBs</h3>
+                        <hr>
+                        <p>R& B is a style of popular music developed in the 1940s
+                             from blues music, but using electrically amplified instruments.
+                             R&B is an abbreviation for ' rhythm and blues'.</p>
+                        <a href="" class="btn btn-primary btn-center -center" style="font-size:22px;">
+                            Open</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- Footer Links -->
-
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">&#169; 2021 Copyright:
-        <a href=""> Moringa school</a>
+    <div class="footer-p">
+        <footer class="page-footer">
+            <div style="background-color:#09092b; color:#fff; font-size:12pt; padding: 1%;">
+                <div class="footer-copyright py-3" style="padding-left: 42%;">&#169;Copyright 2021: Moringa school
+                </div>
+            </div>
+        </footer>
     </div>
-    <!-- Copyright -->
 
-</footer>
-<!-- Footer -->
