--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,4 +1,6 @@
-
+`   <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap" rel="stylesheet">
 
     <h1 class="title">Music Recommender</h1>
     <hr>
@@ -9,9 +11,7 @@
             latest and most interesting music,leave a comment </p>
     </div>
 
-    <div class="col display">
-        <a type="button" class="btn btn-primary text-center" href="">Post song</a>
-    </div>
+    
 
     <div class="container categories">
         <h1 style="text-align:center; ">Categories of Music</h1>
@@ -23,7 +23,7 @@
                         <h3>Gospel</h3>
                         <hr>
                         <p>Gospel music often has dominant vocals (often with strong use of harmony) with Christian lyrics. Gospel music can be traced to the early 17th century. Hymns and sacred songs were often repeated in a call and response fashion.</p>
-                        <a href="" class="btn btn-primary btn-center -center"
+                        <a routerLink="/gospel" routerLinkActive="active" class="btn btn-primary btn-center -center"
                             style="font-size:22px;">
                             Open</a>
                     </div>
@@ -38,7 +38,7 @@
                              the 1980s and '90s; also, the backing music for rap,
                               the musical style incorporating rhythmic and/or rhyming speech that became 
                             the movement's most lasting and influential art form.</p>
-                        <a href="" class="btn btn-primary btn-center -center"
+                        <a routerLink="/hiphop" routerLinkActive="active"  class="btn btn-primary btn-center -center"
                             style="font-size:22px;">
                             Open</a>
                     </div>
@@ -54,7 +54,7 @@
                         <p>Reggae is a music genre that originated in
                              Jamaica in the late 1960s. The term also denotes the 
                              modern popular music of Jamaica and its diaspora.</p>
-                        <a href="" class="btn btn-primary btn-center -center" style="font-size:22px;">
+                        <a routerLink="/reggae" routerLinkActive="active" class="btn btn-primary btn-center -center" style="font-size:22px;">
                             Open</a>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                         <p>R& B is a style of popular music developed in the 1940s
                              from blues music, but using electrically amplified instruments.
                              R&B is an abbreviation for ' rhythm and blues'.</p>
-                        <a href="" class="btn btn-primary btn-center -center" style="font-size:22px;">
+                        <a routerLink="/rnb" routerLinkActive="active" class="btn btn-primary btn-center -center" style="font-size:22px;">
                             Open</a>
                     </div>
                 </div>
