--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -3,11 +3,11 @@
 <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
+<div class="container register">
 <form class="form-horizontal" action='' method="POST">
     <fieldset>
         <div id="legend">
-            <legend class="" style="text-align:center">Register</legend>
+            <legend style="padding-left:30%" >Register</legend>
         </div>
         <div class="control-group">
             <!-- Username -->
@@ -49,8 +49,9 @@
         <div class="control-group">
             <!-- Button -->
             <div class="controls">
-                <button class="btn btn-success">Register</button>
+                <button class="btn btn-success" >Register</button>
             </div>
         </div>
     </fieldset>
 </form>
+</div>
