--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
-					Don't have an account?<a href="#">Sign Up</a>
+					Don't have an account?<a routerLink="/register" routerLinkActive="active">Sign Up</a>
 				</div>
 				<div class="d-flex justify-content-center">
 					<a href="#">Forgot your password?</a>
