--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid navbar">
 <nav class="navbar navbar-expand-lg navbar bg static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" routerLink="/" routerLinkActive="active" >
         Music Recommender
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,10 +11,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="landing">Home</a>
+            <a class="nav-link active"  routerLink="/" routerLinkActive="active">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/login">Sign in</a>
+            <a class="nav-link" routerLink="/login" routerLinkActive="active">Sign in</a>
           </li> 
         </ul>
       </div>
