--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -5,13 +5,17 @@
     <h1 class="title">Music Recommender</h1>
     <hr>
 
+
+
     <div class="container">
         <p id="paragraph">We are most delightfully welcoming you to the most amazing Music recommender,sign up and get
             to listen to the
             latest and most interesting music,leave a comment </p>
     </div>
 
-    
+        <div class="col display">
+        <a type="button" routerLink="/postsong" routerLinkActive="active" class="btn btn-primary text-center">Post song</a>
+    </div>
 
     <div class="container categories">
         <h1 style="text-align:center; ">Categories of Music</h1>
